--- a/src/style.css
+++ b/src/style.css
@@ -209,6 +209,17 @@ h1 {
   background-color: #0056b3; /* ホバー時の色は適宜変更 */
 }
 
+.commit-element {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px 0;
+  border-radius: 50%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: #ccc;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
