svgでコミットツリーを表現できるようになった。
・しかしブランチがうまく表現できないと思われるので、修正する。

--- a/src/style.css
+++ b/src/style.css
@@ -209,25 +209,24 @@ h1 {
   background-color: #0056b3; /* ホバー時の色は適宜変更 */
 }
 
+.vcs-content {
+  height: 100%;
+}
+
+/* コミットツリー */
+
 .commit-tree {
+  height: calc(100% - 2rem); 
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .commit-element {
-  width: 50px;
-  height: 50px;
-  margin: 10px 0;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
-  padding: 10px;
-  border: 1px solid #ccc;
   background-color: #ccc;
-}
-
-.commit-element p {
-  margin: auto;
-  text-align: center;
+  margin: 40px auto;
 }
 
 svg {
