コミットツリーをsvgで生成できるようにした。
・commitクラスにプロパティ追加-コミットした時のブランチを記録できるようにした。
・repositoryのcommitメソッドを変更-commitクラスのプロパティ追加に対応できるようにした。
・commitのテストを修正。

--- a/src/style.css
+++ b/src/style.css
@@ -216,17 +216,8 @@ h1 {
 /* コミットツリー */
 
 .commit-tree {
-  height: calc(100% - 2rem); 
-  display: flex;
-  flex-direction: column;
-}
-
-.commit-element {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  background-color: #ccc;
-  margin: 40px auto;
+  height: calc(100% - 2rem);
+  overflow: auto;
 }
 
 svg {
