--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ h1 {
   height: 100%;
   border-right: 1px solid #ccc;
   padding: 20px;
+  padding-bottom: 0;
   box-sizing: border-box;
 }
 
@@ -113,7 +114,7 @@ h1 {
   position: relative;
 }
 
-.button-Container {
+.button-container {
   width: 90%;
   position: absolute;
   bottom: 20px;
@@ -121,7 +122,7 @@ h1 {
   justify-content: space-evenly;
 }
 
-.button-Container button {
+.button-container button {
   width: fit-content;
 }
 
@@ -211,6 +212,7 @@ h1 {
 
 .vcs-content {
   height: 100%;
+  position: relative;
 }
 
 /* コミットツリー */
@@ -223,6 +225,7 @@ h1 {
 svg {
   overflow: visible;
 }
+
 
 @media (prefers-color-scheme: light) {
   :root {
