--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,17 @@ h1 {
   transition: background-color 1s ease;
 }
 
+/* ボタンの共通スタイル */
+button {
+  padding: 10px;
+  border: none;
+  background-color: #f0f0f0;
+  color: rgb(58, 58, 58);
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
 .init-button:hover {
   background-color: #7a7a7a;
 }
@@ -134,7 +145,6 @@ h1 {
   width: 80%;
   padding: 10px;
   border: none;
-  background-color: #f9f9f9;
   cursor: pointer;
   position: absolute;
   bottom: 10px;
@@ -278,6 +288,33 @@ svg {
   overflow: auto;
 }
 
+/* ワーキングエリア スタイル */
+
+.file {
+  max-width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 20px;
+  margin: 5px;
+  background-color: #f0f0f0;
+}
+
+.folder {
+  max-width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 5px;
+  background-color: #ffc57f;
+}
+
+.level-back-button {
+  margin: 20px;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
