--- a/src/style.css
+++ b/src/style.css
@@ -288,6 +288,18 @@ svg {
   overflow: auto;
 }
 
+.commit-balloon {
+  max-width: 400px;
+  max-height: 300px;
+  position: absolute;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: auto;
+  z-index: 1000;
+}
+
 /* ワーキングエリア スタイル */
 
 .file {
