--- a/src/style.css
+++ b/src/style.css
@@ -209,6 +209,25 @@ button {
   margin: 10px auto;
 }
 
+.how-to-use-button {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  display: block;
+  margin: auto;
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  background-color: #949494;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 2rem;
+  transition: background-color 1s ease;
+}
+
 /* 要素をクリックしたときのアクティブ化スタイル */
 .active {
   border: #007bff solid 2px;
@@ -222,10 +241,26 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.modal-frame {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 /* モーダル本体 */
