--- a/src/style.css
+++ b/src/style.css
@@ -83,14 +83,17 @@ h1 {
 }
 
 /* ボタンの共通スタイル */
-button {
+.button {
+  min-width: 150px;
   padding: 10px;
+  margin: 10px;
   border: none;
   background-color: #f0f0f0;
   color: rgb(58, 58, 58);
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
+  font-weight: bold;
 }
 
 .init-button:hover {
@@ -142,7 +145,6 @@ button {
 }
 
 .split-item button {
-  width: 80%;
   padding: 10px;
   border: none;
   cursor: pointer;
@@ -265,11 +267,20 @@ button {
 
 /* モーダル本体 */
 .modal {
+  min-height: 60%;
   background-color: white;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-title {
+  text-align: center;
 }
 
 /* タイトル */
