モーダルにボタンを追加して、ページを切り替えれるようにした。
・appDataというファイルを作成。ここにモーダルの文章などのデータを入れる。
・

--- a/src/style.css
+++ b/src/style.css
@@ -283,6 +283,12 @@ h1 {
   text-align: center;
 }
 
+.modal-button-container {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
 /* タイトル */
 .modal h2 {
   margin-top: 0;
